# deepseek-bridge

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  AGENTS.md  AI_ASSISTED_DEVELOPMENT.md  CHANGELOG.md  Dockerfile  PR_MESSAGE.md  README.md  SECURITY.md  docker-compose.litellm-e2e.yml  pyproject.toml
.codex/skills/gof/: SKILL.md
.codex/skills/gof/agents/: openai.yaml
.github/workflows/: ci.yml  release.yml
.sisyphus/: boulder.json
.sisyphus/drafts/: cursor-compat-plus-cli-ux.md  tui-fix-plus.md  tui-polish.md
.sisyphus/evidence/: task-1-cli-help.txt  task-1-grep-clean.txt  task-1-imports.txt  task-F3-qa-scenarios.txt
.sisyphus/notepads/T1-T9-startup-banner/: learnings.md
.sisyphus/notepads/add-signal-handlers/: learnings.md
.sisyphus/notepads/broken-pipe-hardening/: learnings.md
.sisyphus/notepads/cursor-compat-plus-cli-ux/: learnings.md
.sisyphus/notepads/deepseek-bridge-overhaul/: decisions.md  issues.md  learnings.md
.sisyphus/notepads/f2-code-quality-and-type-check/: issues.md  learnings.md
.sisyphus/notepads/fix-final-verification-wave/: learnings.md
.sisyphus/notepads/proxy-audit-improvements/: learnings.md
.sisyphus/notepads/rename-test-imports/: learnings.md
.sisyphus/notepads/tui-polish/: learnings.md
.sisyphus/plans/: broken-pipe-hardening.md  cursor-compat-improvements.md  cursor-compat-plus-cli-ux.md  db-tui-cli-polish.md  deepseek-bridge-overhaul.md  proxy-audit-improvements.md  tui-polish.md
charts/deepseek-bridge/: Chart.yaml  README.md  values.schema.json  values.yaml
charts/deepseek-bridge/dashboards/: deepseek-bridge.json
charts/deepseek-bridge/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  grafana-dashboard-configmap.yaml  hpa.yaml  httproute.yaml  ingress.yaml  networkpolicy.yaml  pdb.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml  valkey-deployment.yaml  valkey-pvc.yaml  valkey-service.yaml
charts/deepseek-bridge/templates/tests/: health-test.yaml
e2e/litellm/: config.yaml  litellm_bridge_deepseek_e2e.py
examples/kubernetes/: deployment.yaml
scripts/: k8s-minikube-smoke.sh  litellm-e2e.sh
skills/issue-to-green-pr/: SKILL.md
skills/issue-to-green-pr/agents/: openai.yaml
src/deepseek_bridge/: __init__.py  __main__.py  _normalization.py  _types.py  asgi.py  async_upstream.py  cli.py  config.py  handler.py  helpers.py  logging.py  metrics.py  reasoning_store.py  responses_converter.py  server.py  server_infrastructure.py  streaming.py  trace.py  transform.py  tunnel.py  valkey_store.py
src/deepseek_bridge/handler/: __init__.py  _client.py  _endpoints.py  _response.py  _routes.py  _streaming.py  _trace.py  _upstream.py
src/deepseek_bridge/streaming/: __init__.py  _accumulator.py  _display.py  _sse.py
src/deepseek_bridge/transform/: __init__.py  _cache.py  _normalize.py  _prepare.py  _recovery.py  _response.py
src/deepseek_bridge/tui/: __init__.py  app.py  config.py  dashboard.py  log_handler.py  logs.py
src/deepseek_cursor_proxy/: __init__.py  config.py  logging.py  reasoning_store.py  server.py  transform.py  tunnel.py
src/deepseek_cursor_proxy/tui/: __init__.py  app.py  config.py  dashboard.py  logs.py
tests/: test_asgi.py  test_cli.py  test_config.py  test_cors.py  test_deepseek_api_compliance.py  test_handler_endpoints.py  test_helm_chart.py  test_integration.py  test_k8s_minikube_smoke.py  test_kubernetes_example.py  test_litellm_e2e_compose.py  test_live.py  test_metrics.py  test_normalization.py  test_protocol.py  test_reasoning_store.py  test_release_workflow.py  test_resilience.py  test_responses_converter.py  test_server.py  test_soak.py  test_sse_error.py  test_streaming.py  test_trace.py  test_transform.py  test_tui_log_handler.py  test_tunnel.py
tests/benchmarks/: test_sse_perf.py
tests/functional/: __init__.py  fixtures.py  test_valkey_http.py
