[build-system]
requires = ["setuptools>=77", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "deepseek-bridge"
description = "Local OpenAI-compatible proxy for AI coding tools and DeepSeek thinking models"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Yixing Lao" },
]
keywords = ["cursor", "deepseek", "proxy", "llm", "openai-compatible", "reasoning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: Proxy Servers",
    "Topic :: Software Development",
]
dependencies = [
    "PyYAML>=6.0",
    "urllib3>=2.0",
]

[project.optional-dependencies]
tui = ["textual>=8.2.5"]
dev = [
    "black>=26.3.1",
    "coverage>=7.10.0",
    "mypy>=1.15.0",
    "pre-commit>=3.0.0",
    "ruff>=0.11.0",
    "textual>=8.2.5",
]

[project.scripts]
deepseek-bridge = "deepseek_bridge.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["deepseek_bridge*"]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
warn_unused_ignores = true
ignore_missing_imports = true
strict_optional = true

[tool.setuptools_scm]

[tool.coverage.run]
source = ["src/deepseek_bridge"]
omit = ["*/tui/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    'if __name__ == .__main__.:',
]
