[build-system]
requires = ["setuptools>=77", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "deepseek-bridge"
description = "Local OpenAI-compatible proxy for AI coding tools and DeepSeek thinking models"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [
    { name = "Yixing Lao" },
]
keywords = ["cursor", "deepseek", "proxy", "llm", "openai-compatible", "reasoning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: Proxy Servers",
    "Topic :: Software Development",
]
dependencies = [
    "PyYAML>=6.0",
    "urllib3>=2.0",
    "orjson>=3.10",
]

[project.optional-dependencies]
dev = [
    "black>=26.3.1",
    "coverage[toml]>=7.10.0",
    "mypy>=1.15.0",
    "pre-commit>=3.0.0",
    "pycodestyle>=2.12.0",
    "pylint>=3.3.0",
    "ruff>=0.15.13",
    "types-PyYAML>=6.0.12",
    "yamllint>=1.35.1",
]

[project.scripts]
deepseek-bridge = "deepseek_bridge.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["deepseek_bridge*"]

[tool.black]
line-length = 80
target-version = ["py314"]

[tool.ruff]
line-length = 80
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "PIE", "RET", "RUF", "PERF"]
ignore = ["PERF203"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["RUF003", "RUF012"]

[tool.pycodestyle]
max-line-length = 80
exclude = ".git,.idea,.mypy_cache,.ruff_cache,.uv-cache,.venv,__pycache__"
ignore = "E203,W503"

[tool.pylint.main]
py-version = "3.14"
jobs = 0
recursive = true

[tool.pylint.format]
max-line-length = 80

[tool.pylint.messages_control]
disable = [
    "arguments-differ",
    "attribute-defined-outside-init",
    "broad-exception-caught",
    "consider-using-with",
    "cyclic-import",
    "duplicate-code",
    "fixme",
    "import-outside-toplevel",
    "invalid-name",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "no-member",
    "protected-access",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-ancestors",
    "too-many-branches",
    "too-many-instance-attributes",
    "too-many-lines",
    "too-many-locals",
    "too-many-nested-blocks",
    "too-many-positional-arguments",
    "too-many-return-statements",
    "too-many-statements",
    "unused-argument",
]

[tool.mypy]
python_version = "3.14"
strict = true
warn_unused_ignores = true
disable_error_code = ["attr-defined"]

[tool.setuptools_scm]

[tool.coverage.run]
branch = true
source = ["src/deepseek_bridge"]

[tool.coverage.report]
fail_under = 75
precision = 1
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    'if __name__ == .__main__.:',
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
